# topopt_nonlocal

./: CMakeLists.txt  README.md  filter.hpp  global.hpp  main.cpp  nonlocal.cpp  nonlocal.hpp  utilities.hpp
.cache/clangd/index/: dynamic_fracture.cpp.42B25D31E469CC71.idx
src/: filter.hpp  global.hpp  kernel.hpp  main.cpp  topopt.cpp  topopt.hpp  utilities.cpp
test/: bridge.msh  bridge.yaml  cantilever.msh  input.yaml
test/bridge2d/refinement/: nonlocal_heaviside_refine1_scale1.0_vol0.2_radius10_zeta0.0.yaml  nonlocal_heaviside_refine2_scale1.0_vol0.2_radius10_zeta0.0.yaml  nonlocal_heaviside_refine3_scale1.0_vol0.2_radius10_zeta0.0.yaml  nonlocal_heaviside_refine4_scale1.0_vol0.2_radius10_zeta0.0.yaml  nonlocal_heaviside_refine5_scale1.0_vol0.2_radius10_zeta0.0.yaml  nonlocal_heaviside_refine6_scale1.0_vol0.2_radius10_zeta0.0.yaml  nonlocal_refine1_scale1.0_vol0.2_zeta0.0.yaml  nonlocal_refine2_scale1.0_vol0.2_zeta0.0.yaml  nonlocal_refine3_scale1.0_vol0.2_zeta0.0.yaml  nonlocal_refine4_scale1.0_vol0.2_zeta0.0.yaml  nonlocal_refine5_scale1.0_vol0.2_zeta0.0.yaml  nonlocal_refine6_scale1.0_vol0.2_zeta0.0.yaml  simp_heaviside_refine1_scale1.0_vol0.2_radius10.yaml  simp_heaviside_refine2_scale1.0_vol0.2_radius10.yaml  simp_heaviside_refine3_scale1.0_vol0.2_radius10.yaml  simp_heaviside_refine4_scale1.0_vol0.2_radius10.yaml  simp_heaviside_refine5_scale1.0_vol0.2_radius10.yaml  simp_heaviside_refine6_scale1.0_vol0.2_radius10.yaml  simp_refine1_scale1.0_vol0.2.yaml  simp_refine2_scale1.0_vol0.2.yaml  simp_refine3_scale1.0_vol0.2.yaml  simp_refine4_scale1.0_vol0.2.yaml  (+2 more)
(+484 files in other folders)
